--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-web": "^0.58.1",
     "clsx": "^2.1.1",
+    "hls.js": "^1.6.15",
     "lenis": "^1.3.16",
     "next": "16.0.10",
     "react": "19.2.1",
